--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,23 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-26</p>
+<hr/>
+<h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/lilium/jobs/1762696'>Job Application for Intern Production System, New Factory Planning & Simulation at Lilium</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lilium/jobs/1772242'>Job Application for Intern Digital Production at Lilium</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1772242'>Job Application for Intern Digital Production at Lilium</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -113,7 +125,7 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -155,7 +167,7 @@
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -167,7 +179,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -391,7 +403,7 @@ that?...</p>
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/jobDetails.do?functionName=getJobDetail&jobPostId=42878&localeCode=en-us'>Intern, Design Verification Engineering (Fall 2019) - Austin TX ... - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/jobDetails.do?functionName=getJobDetail&jobPostId=42878&localeCode=en-us'>Intern, Design Verification Engineering (Fall 2019) - Austin TX ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... What will I be accountable for? As a Design Verification Engineer Intern, you 
 would be accountable for verification of one or more functional blocks at the unit 
@@ -413,7 +425,7 @@ or?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
+<h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -449,7 +461,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
+<h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -466,18 +478,6 @@ learning?...</p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692189123-internship-project-product-manager'>Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-25</p>
-<hr/>
-<h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://caterwings.join.com/jobs/249137-internship-business-development-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
