Job Application for Sr. Technical Program Manager at Twitch. Netflix - Talent Mobility Program Manager. Abrigo Careers - Implementation Project Manager. Johnson Electric - Jobs: Project Manager - Apply online. Operations Support Project Manager - Be Quad. Operations Support Project Manager - Be Quad. Wonderment Apps - Jobs: Scrum Master / Project Manager - Apply online. Job Application for Project Manager - New Factory: Composites Production at Lilium. Job Application for Project Manager - New Factory: Propulsion System Assembly at Lilium. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Education Program Manager - Apply online. Right At School - Jobs: After-School Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Education Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: Program Manager - Apply online. Right At School - Jobs: After-School Program Manager - Apply online. Right At

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,20 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4374865002'>Job Application for Sr. Technical Program Manager at Twitch</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/netflix/a6cc51ea-ff65-414f-ae1e-511af6e42945'>Netflix - Talent Mobility Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://johnson-electric-4.workable.com/j/0303CC3DDB'>Johnson Electric - Jobs: Project Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnson-electric-4.workable.com/j/0303CC3DDB'>Johnson Electric - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12688'>Operations Support Project Manager - Be Quad</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12689'>Operations Support Project Manager - Be Quad</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://wonderment.workable.com/j/416B49A91D'>Wonderment Apps - Jobs: Scrum Master / Project Manager - Apply online</a></h5> 
@@ -72,7 +80,7 @@
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/10CDD4379F'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/10CDD4379F'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -80,7 +88,7 @@
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/1351D63455'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/1351D63455'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/50B60FC70A'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/50B60FC70A'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -204,7 +212,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/B905E5F03A'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/B905E5F03A'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -220,7 +228,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/DE15303065'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/DE15303065'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -268,7 +276,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692399070-program-manager'>Bosch Group Program Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692399070-program-manager'>Bosch Group Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -284,7 +292,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/rdc-care-project-manager-with-french-33144'>RDC Care Project Manager with French - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/rdc-care-project-manager-with-french-33144'>RDC Care Project Manager with French - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -370,7 +378,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/9A9686BD68'>Hostway | HOSTING - Jobs: Global Partner Project Manager - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/9A9686BD68'>Hostway | HOSTING - Jobs: Global Partner Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -438,16 +446,6 @@ Provides project management expertise for highly complex creative projects,?...<
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ogUCafwG'>The Climate Corporation Careers - Science Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='http://planate.recruiterbox.com/jobs/fk03f5v'>
-    Assistant Project Manager at Planate Management Group
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
