Checkout.com - DevOps Engineer. Curriculum Associates Careers - Senior DevOps Engineer. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). eHealth Careers - Manager, DevOps. Job Application for Group Manager, DevOps at Altisource. 4Catalyzer Cloud DevOps Engineer | SmartRecruiters. Job Application for Senior DevOps Engineer Sofia at SumUp. TMS LLC DevOps Engineer | SmartRecruiters.     DevOps Engineer (Software Development) at Artificial Solutions . IDT - Director of Development Operations - DevOps. Burwood Group Careers - DevOps Architect. Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters. Senior DevOps Engineer - Anthem, Inc. Careers.       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.     . DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore. CARFAX Canada Careers - DevOps Engineer. Job @ Nezasa (Lisbon): DevOps Engineer | JOIN. Shore Consulting Senior DevOps Engineer | SmartRecruiters. eFront - CI/CD (DevOps) Engineer - Insight. Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN. TFS Administrator / DevOps Administrator (m/w/d). Job Application for Senior/Principal DevOps Engineer at PatientsLikeMe. Magenic Careers - Senior DevOps Engineer. Nutanix Careers - MTS - DevOps Developer. Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters. Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN. Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN. Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN. Cirrus Logic Careers - DevOps Engineer. Benefitfocus Careers - Sr. DevOps Engineer. spruceinfotech DevOps Software Engineer | SmartRecruiters. Contract DevOps Engineer | Shulman Fleming &amp; Partners. Alfresco - DevOps Cloud Architect. Job Application for DevOps Engineer at Arundo Analytics.     DevOps Engineer (Software Development) at Artificial Solutions . Devoteam CI/CD Automation  (DevOps

--- a/devops.html
+++ b/devops.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -159,7 +159,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -192,7 +192,7 @@ leading?...</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -335,7 +335,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FusionFactory/743999692213298-devops-engineer'>Fusion Factory DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FusionFactory/743999692213298-devops-engineer'>Fusion Factory DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -403,7 +403,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -465,7 +465,7 @@ available?...</p>
 <p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
 operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
